# mpi4torch

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
csrc/: extension.cpp
doc/: api_reference.rst  basic_usage.rst  conf.py  examples.rst  glossary.rst  index.rst
examples/: isend-recv-wait.py  simple_linear_regression.py
src/: __init__.py
tests/: test_collectives.py  test_joindummies.py  test_mpi4pyinterop.py  test_nonblocking.py
