[build-system]
# PEP 517 and PEP 518 build requirements
# cf. https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support

# we need torch as a build requirement, since we explicitly import it within setup.py
requires = [
    "torch>=1.9.0",
    'importlib-metadata;python_version<"3.8"', #PEP 508-style dependency: Only install for cpython<3.8
    "setuptools>=40.8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

